[package]
name = "bins"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
proconio = { version = "0.4.1", features = ["derive"] }
itertools = "0.10.0"
