[package]
name = "json-sample"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
