[package]
name = "kuon-sample"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
kuon = "0.0.22"
anyhow = "1.0.38"
dotenv = "0.15.0"
